--- a/src/components/Navigation/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.scss
@@ -10,6 +10,11 @@
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
+
+    .Logo {
+        height: 11%;
+        margin-bottom: 32px;;
+    }
 }
 
 @media (min-width: 500px) {
